fix display font on small displays

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -63,14 +63,24 @@ a:hover {
 }
 
 .display-3 {
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .display-4 {
-    font-size: 3em;
+    font-size: 2em;
 }
 
 @media (min-width: 576px) {
+	.display-3 {
+		font-size: 3em;
+	}
+
+	.display-4 {
+    	font-size: 3em;
+    }
+}
+
+@media (min-width: 768px) {
 	.display-3 {
 		font-size: 4.5em;
 	}
